--- a/debian/control
+++ b/debian/control
@@ -1,12 +1,12 @@
-Source: libvmod-example
+Source: libvmod-ip2location
 Section: web
 Priority: extra
-Maintainer: Lasse Karstensen <lasse@varnish-software.com>
+Maintainer: Brett Fitzgerald <brettgfitzgerald@gmail.com>
 Build-Depends: debhelper (>= 7), build-essential, python-docutils
 Standards-Version: 3.8.1
-Vcs-Git: git://github.com/varnish/libvmod-example.git
+Vcs-Git: git://github.com/controversy187/libvmod-ip2location.git
 
-Package: libvmod-example
+Package: libvmod-ip2location
 Architecture: any
-Depends: varnish, ${misc:Depends}
-Description: Example vmod for Varnish
+Depends: varnish, ip2location, ${misc:Depends}
+Description: IP2Location vmod for Varnish
